--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@petamoriken/float16": "^1.0.6",
     "chart.js": "^2.7.2",
     "material-ui": "^0.20.2",
+    "material-ui-search-bar": "^1.0.0-beta.11",
+    "material-ui-search-bar-enhanced": "^0.5.1",
     "randomcolor": "^0.5.3",
     "react": "^16.4.2",
     "react-body-backgroundcolor": "^1.2.1",
