--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^2.0.0-beta.1",
     "@material-ui/lab": "^1.0.0-alpha.11",
     "@petamoriken/float16": "^1.0.6",
+    "axios": "^0.18.0",
     "chart.js": "^2.7.2",
     "material-ui": "^0.20.2",
     "material-ui-search-bar": "^1.0.0-beta.11",
@@ -17,10 +18,14 @@
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.4.2",
+    "react-heatmap-graph": "^1.1.7",
+    "react-heatmap-grid": "^0.4.0",
     "react-helmet": "^5.2.0",
     "react-motion": "^0.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-shapes": "^0.1.0",
+    "recharts": "^1.2.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "youtube-api-search": "0.0.5"
